--- a/vendingMachine/vendingMachine/vendingMachine.csproj
+++ b/vendingMachine/vendingMachine/vendingMachine.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
-    <Compile Include="DrinkControlle.cs" />
-    <Compile Include="MoneyController.cs" />
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Controller\DrinkControlle.cs" />
+    <Compile Include="Controller\MoneyController.cs" />
+    <Compile Include="Model\Coin.cs" />
+    <Compile Include="Model\Drink.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
